Salvar preferencias do usuario

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -47,7 +47,7 @@
 <h:body class="#{sessionBean.estilo}">
 
 	<div id="navbar" class="navbar navbar-default ace-save-state">
-		<div class="navbar-container ace-save-state #{sessionBean.menuCompacto}" id="navbar-container">
+		<div class="navbar-container ace-save-state" id="navbar-container">
  			<button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
 				<span class="sr-only">Toggle sidebar</span>
 	
@@ -70,189 +70,7 @@
 
 			<div class="navbar-buttons navbar-header pull-right" role="navigation">
 				<ul class="nav ace-nav">
-            
-<!--             
-					<li class="purple dropdown-modal">
-						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-							<i class="ace-icon fa fa-bell icon-animated-bell"></i>
-							<span class="badge badge-important">8</span>
-						</a>
-	
-						<ul class="dropdown-menu-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">
-							<li class="dropdown-header">
-								<i class="ace-icon fa fa-exclamation-triangle"></i>
-								8 Notifications
-							</li>
-	
-							<li class="dropdown-content">
-								<ul class="dropdown-menu dropdown-navbar navbar-pink">
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">
-													<i class="btn btn-xs no-hover btn-pink fa fa-comment"></i>
-													New Comments
-												</span>
-												<span class="pull-right badge badge-info">+12</span>
-											</div>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#">
-											<i class="btn btn-xs btn-primary fa fa-user"></i>
-											Bob just signed up as an editor ...
-										</a>
-									</li>
-	
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">
-													<i class="btn btn-xs no-hover btn-success fa fa-shopping-cart"></i>
-													New Orders
-												</span>
-												<span class="pull-right badge badge-success">+8</span>
-											</div>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#">
-											<div class="clearfix">
-												<span class="pull-left">
-													<i class="btn btn-xs no-hover btn-info fa fa-twitter"></i>
-													Followers
-												</span>
-												<span class="pull-right badge badge-info">+11</span>
-											</div>
-										</a>
-									</li>
-								</ul>
-							</li>
-	
-							<li class="dropdown-footer">
-								<a href="#">
-									See all notifications
-									<i class="ace-icon fa fa-arrow-right"></i>
-								</a>
-							</li>
-						</ul>
-					</li>
--->               
-	
-<!--    
-					<li class="green dropdown-modal">
-						<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-							<i class="ace-icon fa fa-envelope icon-animated-vertical"></i>
-							<span class="badge badge-success">5</span>
-						</a>
-	
-						<ul class="dropdown-menu-right dropdown-navbar dropdown-menu dropdown-caret dropdown-close">
-							<li class="dropdown-header">
-								<i class="ace-icon fa fa-envelope-o"></i>
-								5 Messages
-							</li>
-	
-							<li class="dropdown-content">
-								<ul class="dropdown-menu dropdown-navbar">
-									<li>
-										<a href="#" class="clearfix">
-											<h:graphicImage library="aceAdmin" name="images/avatars/avatar.png" styleClass="msg-photo" alt="Alex's Avatar"/>
-											<span class="msg-body">
-												<span class="msg-title">
-													<span class="blue">Alex:</span>
-													Ciao sociis natoque penatibus et auctor ...
-												</span>
-	
-												<span class="msg-time">
-													<i class="ace-icon fa fa-clock-o"></i>
-													<span>a moment ago</span>
-												</span>
-											</span>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#" class="clearfix">
-											<h:graphicImage library="aceAdmin" name="images/avatars/avatar3.png" styleClass="msg-photo" alt="Susan's Avatar"/>
-											<span class="msg-body">
-												<span class="msg-title">
-													<span class="blue">Susan:</span>
-													Vestibulum id ligula porta felis euismod ...
-												</span>
-	
-												<span class="msg-time">
-													<i class="ace-icon fa fa-clock-o"></i>
-													<span>20 minutes ago</span>
-												</span>
-											</span>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#" class="clearfix">
-											<h:graphicImage library="aceAdmin" name="images/avatars/avatar4.png" styleClass="msg-photo" alt="Bob's Avatar"/>
-											<span class="msg-body">
-												<span class="msg-title">
-													<span class="blue">Bob:</span>
-													Nullam quis risus eget urna mollis ornare ...
-												</span>
-	
-												<span class="msg-time">
-													<i class="ace-icon fa fa-clock-o"></i>
-													<span>3:15 pm</span>
-												</span>
-											</span>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#" class="clearfix">
-											<h:graphicImage library="aceAdmin" name="images/avatars/avatar2.png" styleClass="msg-photo" alt="Kate's Avatar"/>
-											<span class="msg-body">
-												<span class="msg-title">
-													<span class="blue">Kate:</span>
-													Ciao sociis natoque eget urna mollis ornare ...
-												</span>
-	
-												<span class="msg-time">
-													<i class="ace-icon fa fa-clock-o"></i>
-													<span>1:33 pm</span>
-												</span>
-											</span>
-										</a>
-									</li>
-	
-									<li>
-										<a href="#" class="clearfix">
-											<h:graphicImage library="aceAdmin" name="images/avatars/avatar5.png" styleClass="msg-photo" alt="Fred's Avatar"/>
-											<span class="msg-body">
-												<span class="msg-title">
-													<span class="blue">Fred:</span>
-													Vestibulum id penatibus et auctor  ...
-												</span>
-	
-												<span class="msg-time">
-													<i class="ace-icon fa fa-clock-o"></i>
-													<span>10:09 am</span>
-												</span>
-											</span>
-										</a>
-									</li>
-								</ul>
-							</li>
-	
-							<li class="dropdown-footer">
-								<a href="inbox.html">
-									See all messages
-									<i class="ace-icon fa fa-arrow-right"></i>
-								</a>
-							</li>
-						</ul>
-					</li>
--->               
-	
+            	
 					<li class="light-blue dropdown-modal">
 						<a data-toggle="dropdown" href="#" class="dropdown-toggle">
 							<h:graphicImage library="img" name="/user36x36.jpg" styleClass="nav-user-photo" alt="Foto Usuario"/>
@@ -299,7 +117,7 @@
 			try{ace.settings.loadState('main-container')}catch(e){}
 		</script>
 	
-		<div id="sidebar" class="sidebar responsive ace-save-state">
+		<div id="sidebar" class="sidebar responsive ace-save-state #{sessionBean.menuCompacto}">
 			<script type="text/javascript">
 				try{ace.settings.loadState('sidebar')}catch(e){}
 			</script>
@@ -523,26 +341,20 @@
                                  </div>
                               </div>
                               
-                              <div class="ace-settings-item">
-                                 <h:inputText value="#{sessionBean.margens}" pt:type="checkbox" styleClass="ace ace-checkbox-2 ace-save-state" id="ace-settings-add-container" pt:autocomplete="off" />
-                                 <label class="lbl" for="ace-settings-add-container"> Ativa Margens JSF</label>
-                              </div>
-      
-                              <div class="ace-settings-item">
-                                 <h:inputText value="#{sessionBean.submenuFlutuante}" pt:type="checkbox" styleClass="ace ace-checkbox-2" id="ace-settings-hover" pt:autocomplete="off" />
-                                 <label class="lbl" for="ace-settings-hover"> Submenu Flutuante</label>
-                              </div>
+                              <h:form style="padding-bottom: 10px;">
+                                 <div class="ace-settings-item">
+                                    <h:commandButton styleClass="btn btn-white btn-warning btn-sm" action="#{sessionBean.alternarMargens()}" value="#{sessionBean.statusMargens()}" />
+                                 </div>
          
-                              <div class="ace-settings-item">
-                                 <h:inputText value="#{sessionBean.menuCompacto}" pt:type="checkbox" styleClass="ace ace-checkbox-2" id="ace-settings-compact" pt:autocomplete="off" />
-                                 <label class="lbl" for="ace-settings-compact"> Menu Compacto </label>
-                              </div>
+                                 <div class="ace-settings-item">
+                                    <h:commandButton styleClass="btn btn-white btn-warning btn-sm" action="#{sessionBean.alternarSubmenuFlutuante()}" value="#{sessionBean.statusSubmenuFlutuante()}" />
+                                 </div>
+            
+                                 <div class="ace-settings-item">
+                                    <h:commandButton styleClass="btn btn-white btn-warning btn-sm" action="#{sessionBean.alternarMenuCompacto()}" value="#{sessionBean.statusMenuCompacto()}" />
+                                 </div>
+                              </h:form>
          
-                              <div class="ace-settings-item">
-                                 <h:inputText value="#{sessionBean.opcaoSelecionada}" pt:type="checkbox" styleClass="ace ace-checkbox-2" id="ace-settings-highlight" pt:autocomplete="off" />
-                                 <label class="lbl" for="ace-settings-highlight"> Destacar Opção Selecionada </label>
-                              </div>                              
-                              
                            </div><!-- /.pull-left -->
 
                            <!-- TEMA -->
