Correção do LazyDataModel nas classes FornecedorBean, PagamentoBean e BaixaBean

--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300"/>
 
 	<!-- bootstrap & fontawesome --> 
-	<link rel="stylesheet" type="text/css" href="#{facesContext.externalContext.requestContextPath}/resources/aceAdmin/font-awesome/4.5.0/css/font-awesome.min.css"/> 
+    <h:outputStylesheet library="aceAdmin" name="font-awesome/4.5.0/css/font-awesome.min.css"/> 
 	<h:outputStylesheet library="aceAdmin" name="css/bootstrap.min.css"/>
 
 	<!-- page specific plugin styles -->
