--- a/src/main/webapp/resources/template/aceadmin.xhtml
+++ b/src/main/webapp/resources/template/aceadmin.xhtml
@@ -428,22 +428,18 @@
 			<div class="footer-inner">
 				<div class="footer-content">
 					<span class="bigger-120">
-						<span class="blue bolder">Ace</span>
-						Application copyright 2013-2014
+						<span class="blue bolder">Agenda Financeira</span>
+						- Futura Informática - <i class="ace-icon fa fa-copyright"></i> copyright 1992-2020
 					</span>
 	
 					
 					<span class="action-buttons">
-						<a href="#">
-							<i class="ace-icon fa fa-twitter-square light-blue bigger-150"></i>
+						<a href="https://www.futurainformatica.com.br" target="_blank">
+							<i class="ace-icon fa fa-globe bigger-150"></i>
 						</a>
 	
-						<a href="#">
-							<i class="ace-icon fa fa-facebook-square text-primary bigger-150"></i>
-						</a>
-	
-						<a href="#">
-							<i class="ace-icon fa fa-rss-square orange bigger-150"></i>
+						<a href="https://github.com/osmarmartins" target="_blank">
+							<i class="green ace-icon fa fa-github bigger-150"></i>
 						</a>
 					</span>
 				</div>
