--- a/src/main/webapp/relatorios/ContasAPagar.jrxml
+++ b/src/main/webapp/relatorios/ContasAPagar.jrxml
@@ -1,35 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
+<!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ContasAPagar" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7bf458c4-3d05-426a-b32a-aa7add85e51f">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySQL Futura UOL"/>
 	<parameter name="periodo" class="java.lang.String"/>
 	<parameter name="filtros" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[select 
-	pp.dt_vcto,
-	f.razao_social,
-    p.documento,
-    pp.parcela,
-    p.emissao,
-    p.historico,
-    pp.valor + pp.juros + pp.mora + pp.outros - pp.desconto total,
-	CASE WEEKDAY(pp.dt_vcto) 
-        when 0 then 'Segunda'
-        when 1 then 'Terça'
-        when 2 then 'Quarta'
-        when 3 then 'Quinta'
-        when 4 then 'Sexta'
-        when 5 then 'Sábado'
-		when 6 then 'Domingo'                 
-    END DiaDaSemana
-from pgto_parcela pp
-inner join pgto p on p.id_pgto=pp.id_pgto
-inner join fornecedor f on f.id_fornecedor=p.id_fornecedor
-inner join setor s on s.id_setor=p.id_setor
-inner join conta c on c.id_conta=p.id_conta
-where pp.situacao < 3
-order by pp.dt_vcto, f.razao_social]]>
+		<![CDATA[]]>
 	</queryString>
 	<field name="dt_vcto" class="java.util.Date">
 		<property name="com.jaspersoft.studio.field.label" value="dt_vcto"/>
@@ -69,6 +46,7 @@ order by pp.dt_vcto, f.razao_social]]>
 		<property name="com.jaspersoft.studio.field.label" value="DiaDaSemana"/>
 		<fieldDescription><![CDATA[diaDaSemana]]></fieldDescription>
 	</field>
+	<field name="observacao" class="java.lang.String"/>
 	<variable name="totalDia" class="java.math.BigDecimal" resetType="Group" resetGroup="VencimentoGRP" calculation="Sum">
 		<variableExpression><![CDATA[$F{total}]]></variableExpression>
 		<initialValueExpression><![CDATA[BigDecimal.valueOf (0)]]></initialValueExpression>
@@ -203,7 +181,7 @@ order by pp.dt_vcto, f.razao_social]]>
 				<text><![CDATA[Fornecedor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="179" y="5" width="40" height="10" uuid="c4480bd8-04bf-4b42-ab65-eaaedadef3ad">
+				<reportElement x="190" y="5" width="30" height="10" uuid="c4480bd8-04bf-4b42-ab65-eaaedadef3ad">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fd4fcf22-6db2-422b-85ee-d04522dd7b60"/>
 				</reportElement>
 				<textElement>
@@ -212,7 +190,7 @@ order by pp.dt_vcto, f.razao_social]]>
 				<text><![CDATA[doc.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="230" y="5" width="20" height="10" uuid="49c93b4f-dfa3-47df-922e-4d699e32ca5c">
+				<reportElement x="224" y="5" width="26" height="10" uuid="49c93b4f-dfa3-47df-922e-4d699e32ca5c">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ec4a979f-9a37-43cb-af6d-3978cb0317b3"/>
 				</reportElement>
 				<textElement>
@@ -245,7 +223,7 @@ order by pp.dt_vcto, f.razao_social]]>
 				<reportElement x="-10" y="0" width="579" height="1" uuid="e7640547-2a33-42fa-8246-16de66c7aade"/>
 			</line>
 			<staticText>
-				<reportElement x="119" y="5" width="58" height="10" uuid="235cac17-3cf8-4e8e-aca1-e27a3582d0dd">
+				<reportElement x="120" y="5" width="63" height="10" uuid="6ab13fc0-7a8d-44a8-b476-e3c58e92b30d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fd4fcf22-6db2-422b-85ee-d04522dd7b60"/>
 				</reportElement>
 				<textElement>
@@ -257,7 +235,7 @@ order by pp.dt_vcto, f.razao_social]]>
 	</columnHeader>
 	<detail>
 		<band height="14" splitType="Stretch">
-			<textField textAdjust="StretchHeight">
+			<textField>
 				<reportElement x="0" y="0" width="110" height="10" uuid="acf75b19-2cee-4c5b-99c9-04a52e21f7a4">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="686c0bb4-4dc8-4f5b-b0ca-9472356e68d9"/>
 				</reportElement>
@@ -267,7 +245,7 @@ order by pp.dt_vcto, f.razao_social]]>
 				<textFieldExpression><![CDATA[$F{razao_social}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="179" y="0" width="50" height="10" uuid="0e2af3d9-bd32-4e95-9116-ba3f5cb3a00e">
+				<reportElement x="190" y="0" width="30" height="10" uuid="0e2af3d9-bd32-4e95-9116-ba3f5cb3a00e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fd4fcf22-6db2-422b-85ee-d04522dd7b60"/>
 				</reportElement>
 				<textElement>
@@ -276,10 +254,10 @@ order by pp.dt_vcto, f.razao_social]]>
 				<textFieldExpression><![CDATA[$F{documento}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="230" y="0" width="26" height="10" uuid="ee6032e8-4c24-4f7d-8cf4-293e17bfb7ec">
+				<reportElement x="224" y="0" width="26" height="10" uuid="ee6032e8-4c24-4f7d-8cf4-293e17bfb7ec">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ec4a979f-9a37-43cb-af6d-3978cb0317b3"/>
 				</reportElement>
-				<textElement textAlignment="Center">
+				<textElement>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{parcela}]]></textFieldExpression>
@@ -291,7 +269,7 @@ order by pp.dt_vcto, f.razao_social]]>
 				<textElement>
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{historico}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{historico} + IF($F{observacao}==null,  "", "\nOBS: " + $F{observacao} )]]></textFieldExpression>
 			</textField>
 			<textField pattern="¤ #,##0.00;¤ -#,##0.00">
 				<reportElement x="490" y="0" width="65" height="10" uuid="412bd0e2-b044-41f3-b6ef-b94d0f686c69">
@@ -302,14 +280,15 @@ order by pp.dt_vcto, f.razao_social]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{total}]]></textFieldExpression>
 			</textField>
-			<textField pattern="dd/MM/yyyy">
-				<reportElement x="119" y="0" width="60" height="10" uuid="e6e2cd8a-4c49-4446-878b-426066bd785e">
+			<textField>
+				<reportElement x="120" y="0" width="63" height="10" uuid="c68bd8b7-4f96-4500-bad4-483918faff55">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fd4fcf22-6db2-422b-85ee-d04522dd7b60"/>
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textElement>
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{emissao}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{documento}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
